# AAEQ

./: .dockerignore  .gitignore  AUDIO_CAPTURE_SETUP.md  BUILD_SUMMARY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  DOCKER.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  VERIFY_SIGNATURES.md  WIIM_API_REFERENCE.md  aaeq.desktop  docker-compose.yml  setup-audio-loopback.sh  setup-audio-loopback.sh-new
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  docker.yml
apps/desktop/: Cargo.toml
apps/desktop/src/: main.rs  single_instance.rs
apps/desktop/wix/: License.rtf  main.wxs
crates/anp/: Cargo.toml  README.md
crates/anp/src/: compatibility_tests.rs  discovery.rs  errors.rs  features.rs  health.rs  integration_tests.rs  lib.rs  protocol.rs  rtp.rs  session.rs  test_utils.rs  websocket.rs
crates/core/: Cargo.toml
crates/core/src/: dsp_settings.rs  lib.rs  models.rs  resolver.rs  traits.rs
crates/device-wiim/: Cargo.toml
crates/device-wiim/src/: discovery.rs  lib.rs  models.rs  wiim.rs
crates/media-session/: Cargo.toml  README.md
crates/media-session/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 001_initial_schema.sql  002_genre_overrides.sql  003_app_settings.sql  004_last_input_device.sql  005_custom_eq_presets.sql  006_last_output_device.sql  007_profiles.sql  008_theme_setting.sql  010_dsp_profile_settings.sql  011_dsp_dithering_settings.sql  012_debug_logging.sql  013_profile_icons_colors.sql  014_dsp_sink_settings.sql  015_managed_devices.sql  016_global_hotkey_settings.sql  017_dsp_enhancers.sql
crates/persistence/src/: db.rs  lib.rs  repository.rs  repository_simple.rs
crates/stream-server/: Cargo.toml
crates/stream-server/examples/: control_api_server.rs  discover_devices.rs  discover_dlna_devices.rs  test_airplay.rs  test_dlna.rs  test_dlna_push.rs  test_local_dac.rs
crates/stream-server/src/: convert.rs  input.rs  lib.rs  manager.rs  sink.rs  types.rs
crates/stream-server/src/control_api/: mod.rs  routes.rs  server.rs  types.rs
crates/stream-server/src/dsp/: compressor.rs  crossfeed.rs  dither.rs  eq.rs  exciter.rs  exclusivity.rs  expander.rs  headroom.rs  limiter.rs  mod.rs  resampler.rs  room_ambience.rs  stereo_width.rs  tape_saturation.rs  transformer.rs  transient_enhancer.rs  tube_warmth.rs
crates/stream-server/src/sinks/: airplay_old.rs  airplay_sink.rs  dlna_sink.rs  local_dac.rs  mod.rs
crates/stream-server/src/sinks/airplay/: alac.rs  auth.rs  discovery.rs  mod.rs  rtp.rs  rtsp.rs
crates/stream-server/src/sinks/dlna/: avtransport.rs  device_description.rs  device_profiles.rs  didl.rs  discovery.rs  mod.rs  ssdp_server.rs  xml_parser.rs
crates/stream-server/tests/: integration_test.rs
crates/ui-egui/: Cargo.toml
crates/ui-egui/src/: album_art.rs  album_art_lookup.rs  app.rs  audio_viz.rs  bezier_eq_editor.rs  eq_fitting.rs  lib.rs  media.rs  meter.rs  mpris.rs  pipeline_view.rs  preset_library.rs  spectrum_analyzer.rs  theme.rs  views.rs  widgets.rs
docs/: AANP_NODE_PROTOCOL-v0.4-SPEC.md  CROSS_PLATFORM_MEDIA_DETECTION.md  M2_DLNA_IMPLEMENTATION.md  M4_AND_ENHANCEMENTS.md  SINK_ADAPTERS_IMPLEMENTATION.md  STREAMING_SERVICE_SUPPORT.md  STREAM_SERVER_IMPLEMENTATION.md  TESTING_GUIDE.md  configuration.md  development.md  how-it-works.md  v2_ROADMAP.md
docs/.comments/: aaeq-logo.png.xml
wix/: main.wxs
