[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/device-wiim",
    "crates/persistence",
    "crates/ui-egui",
    "apps/desktop", "crates/stream-server",
]

[workspace.package]
version = "0.5.1"
edition = "2021"
license = "MIT"
authors = ["Jascha Wanger <jascha@duck.com> / Tarnover, LLC"]
repository = "https://github.com/jaschadub/AAEQ"
homepage = "https://github.com/jaschadub/AAEQ"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"], default-features = false }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"

# UI
eframe = "0.29"
egui = "0.29"

# Time
chrono = "0.4"

# mDNS/Zeroconf for device discovery
mdns-sd = "0.11"
