[package]
name = "aaeq"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aaeq"
path = "src/main.rs"

[dependencies]
aaeq-ui-egui = { path = "../../crates/ui-egui" }
aaeq-persistence = { path = "../../crates/persistence" }
eframe = { workspace = true }
egui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5.0"
tray-icon = "0.19"
image = "0.25"
