[package]
name = "aaeq"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "aaeq"
path = "src/main.rs"

[dependencies]
aaeq-ui-egui = { path = "../../crates/ui-egui" }
aaeq-persistence = { path = "../../crates/persistence" }
eframe = { workspace = true }
egui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "5.0"
tray-icon = "0.19"
image = "0.25"
single-instance = "0.3"
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Console", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
