[package]
name = "aaeq"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "3C8E6B8A-9C8D-4E9A-8A7D-6F5E4D3C2B1A"
path-guid = "4D9F7C8B-8D7E-5F8B-9B8E-7F6E5D4C3B2A"
license = "wix/License.rtf"

[[bin]]
name = "aaeq"
path = "src/main.rs"

[dependencies]
aaeq-ui-egui = { path = "../../crates/ui-egui" }
aaeq-persistence = { path = "../../crates/persistence" }
eframe = { workspace = true }
egui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
dirs = "5.0"
tray-icon = "0.19"
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
global-hotkey = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading"
] }
