[package]
name = "anp"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
crc32fast = "1.0"
mdns-sd = "0.11"
thiserror = "1.0"
async-trait = "0.1"
log = "0.4"