[package]
name = "aaeq-device-wiim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aaeq-core = { path = "../core" }
async-trait = { workspace = true }
anyhow = { workspace = true }
hex = "0.4"
html-escape = "0.2"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
