[package]
name = "aaeq-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aaeq-core = { path = "../core" }
sqlx = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
