[package]
name = "stream-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

# Audio processing
rubato = "0.15"
dasp_sample = "0.11"
fastrand = "2.0"

# Audio I/O
cpal = "0.15"

# Networking (for DLNA/UPnP)
hyper = { version = "1.5", features = ["full"] }
axum = "0.7"
http-body-util = "0.1"
async-stream = "0.3"
serde_json = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
quick-xml = "0.36"

# AirPlay / mDNS
mdns-sd = { workspace = true }
bytes = "1.9"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
aes = "0.8"
cbc = "0.1"
