[package]
name = "aaeq-ui-egui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aaeq-core = { path = "../core" }
aaeq-persistence = { path = "../persistence" }
aaeq-device-wiim = { path = "../device-wiim" }
eframe = { workspace = true }
egui = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
