[package]
name = "aaeq-ui-egui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aaeq-core = { path = "../core" }
aaeq-persistence = { path = "../persistence" }
aaeq-device-wiim = { path = "../device-wiim" }
stream-server = { path = "../stream-server" }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { version = "0.29", features = ["image"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
zip = "2.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
reqwest = { workspace = true }
serde = { workspace = true }
urlencoding = "2.1"
